name:                haskell-dnants
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskell-dnants#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:   Control.Monad.Writer.DNAnts.ResourceM
                     , DNAnts
                     , DNAnts.Client
                     , DNAnts.State.AppPlayState
                     , DNAnts.State.Ant
                     , DNAnts.State.AntState
                     , DNAnts.State.Cell
                     , DNAnts.State.CellState
                     , DNAnts.State.GameState
                     , DNAnts.State.Grid
                     , DNAnts.State.Map
                     , DNAnts.State.Population
                     , DNAnts.SVG
                     , DNAnts.Types
                     , DNAnts.View.Window
                     , DNAnts.View.Sprites
  build-depends:       base >= 4.7 && < 5
                     , JuicyPixels >= 3.2.8.2  && < 4.0
                     , rasterific-svg >= 0.3.2    && < 0.4
                     , sdl2 >= 2.2.0
                     , svg-tree >= 0.6.1    && < 0.7
                     , text
                     , transformers >= 0.5 && < 0.6
                     , vector >= 0.12.0.1 && < 0.13
  default-language:    Haskell2010

executable haskell-dnants-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-dnants
  default-language:    Haskell2010

test-suite haskell-dnants-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-dnants
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskell-dnants
